# bonanca

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  contributing.html  create.html  fund.json  index.html  install.html  introduction.html  keyvault.html  manage_index.html  print.html  searchindex.js  security.html  support.html  toc.html  toc.js
.github/prompts/: make_rust_struct.prompt.md  wrap_rust_obj.prompt.md
.github/workflows/: CI.yml  Docs.yml
crates/bonanca-api-lib/: Cargo.toml
crates/bonanca-api-lib/schemas/aave/: query.graphql  schema.graphql
crates/bonanca-api-lib/schemas/morpho/: query.graphql  schema.graphql
crates/bonanca-api-lib/src/: lending_oracle.rs  lib.rs
crates/bonanca-api-lib/src/block_explorer/: etherscan.rs
crates/bonanca-api-lib/src/defi/: aave.rs  cmc.rs  cow.rs  defi_llama.rs  jupiter.rs  kamino.rs  mod.rs  morpho.rs  zerox.rs
crates/bonanca-api-lib/src/price_feeds/: cmc.rs  defi_llama.rs  dexscreener.rs  mod.rs
crates/bonanca-balance-sheet/: Cargo.toml
crates/bonanca-balance-sheet/src/: db.rs  lib.rs
crates/bonanca-cli/: Cargo.toml
crates/bonanca-cli/src/: main.rs
crates/bonanca-cli/src/config/: cmds.rs
crates/bonanca-cli/src/index/: args.rs  cmds.rs  index_fund.rs  mod.rs
crates/bonanca-cli/src/lend/: cmds.rs  loan_portfolio.rs  mod.rs
crates/bonanca-cli/src/wallet/: args.rs  cmds.rs
crates/bonanca-core/: Cargo.toml
crates/bonanca-core/src/: cashflows.rs  config.rs  holdings.rs  lib.rs  traits.rs
crates/bonanca-core/src/api_lib/: cmc.rs  defi_llama.rs  jupiter.rs  kamino.rs  mod.rs  traits.rs  zerox.rs
crates/bonanca-core/src/wallets/: evm.rs  solana.rs  traits.rs
crates/bonanca-db/: Cargo.toml
crates/bonanca-db/src/: api_db.rs  chains_db.rs  lib.rs  transactions.rs  utils.rs
crates/bonanca-defi/: Cargo.toml
crates/bonanca-defi/idls/: kvault.json
crates/bonanca-defi/src/evm/: aave.rs  cow.rs  mod.rs  morpho.rs  uniswap.rs  zerox.rs
crates/bonanca-defi/src/evm/ABI/: aave_pool.json
crates/bonanca-defi/src/solana/: jupiter.rs  kamino.rs  mod.rs
crates/bonanca-keyvault/: Cargo.toml
crates/bonanca-keyvault/src/: hd_keys.rs  keyvault.rs  lib.rs  solana.rs  utils.rs
crates/bonanca-keyvault/src/hd_wallet/: evm.rs  mod.rs  solana.rs  traits.rs
crates/bonanca-lend/: Cargo.toml
crates/bonanca-lending/: Cargo.toml
crates/bonanca-lending/idls/: kvault.json
crates/bonanca-lending/src/: traits.rs
crates/bonanca-lending/src/evm/: aave.rs  mod.rs  morpho.rs
crates/bonanca-lending/src/solana/: kamino.rs
crates/bonanca-managers/: Cargo.toml
crates/bonanca-managers/src/: index_fund.rs  lib.rs  loan_portfolio.rs  rebal_methods.rs
crates/bonanca-oracle/: Cargo.toml
crates/bonanca-oracle/src/: prices.rs
crates/bonanca-python/: Cargo.toml  pyproject.toml
crates/bonanca-python/src/: keyvault.rs  lib.rs
crates/bonanca-python/src/defi/evm/: aave.rs  cow.rs  mod.rs  morpho.rs  zerox.rs
crates/bonanca-python/src/defi/solana/: jupiter.rs
crates/bonanca-python/src/oracle/: prices.rs
crates/bonanca-python/src/wallets/: evm.rs  solana.rs
crates/bonanca-swap/: Cargo.toml
crates/bonanca-swap/src/: exchange.rs  lib.rs
crates/bonanca-swap/src/evm/: zerox.rs
crates/bonanca-swap/src/solana/: jupiter.rs
crates/bonanca-wallets/: Cargo.toml
crates/bonanca-wallets/src/: lib.rs
crates/bonanca-wallets/src/wallets/: evm.rs  solana.rs
crates/index/: Cargo.toml
defi/: evm.html  index.html  solana.html
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  create.md  install.md  introduction.md  keyvault.md  manage_index.md  security.md  support.md
docs/src/defi/: evm.md  index.md  solana.md
docs/src/examples/: grid_bot.md  index.md  index_fund.md  scalper.md
docs/src/wallets/: create.md  evm.md  index.md  solana.md  view_vs_load.md
examples/: grid_bot.html  index.html  index_fund.html  scalper.html
examples/crates/grid-bot/: Cargo.toml
examples/crates/grid-bot/src/: args.rs  cmds.rs  db.rs  main.rs  settings.rs
examples/crates/index-fund/: Cargo.toml
examples/crates/index-fund/src/: args.rs  cmds.rs  index_fund.rs  main.rs  rebal_methods.rs
examples/python/: create_keyvault.py  scalper.py  short_token_on_aave.py
src/: args.rs  cmds.rs  lib.rs  main.rs
src/api_lib/: aggregators.rs  cmc.rs  jupiter.rs  mod.rs  oracles.rs  traits.rs  zerox.rs
src/cmc_api/: get.rs
src/config/: args.rs  cmds.rs
src/exchanges/: jupiter.rs  mod.rs  traits.rs  zerox.rs
src/finance_tk/: indexes.rs
src/index/: cmds.rs
src/lend/: args.rs  cmds.rs
src/utils/: args.rs  cmds.rs  config.rs  mod.rs
src/wallet/: args.rs  cmds.rs
src/wallets/: evm.rs  solana.rs  traits.rs
wallets/: create.html  evm.html  index.html  solana.html  view_vs_load.html
