[package]
name = "bonanca"
version = "0.1.0"
edition = "2024"
description = "A CLI for managing crypto index funds"

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
alloy = "1.1.2"
anyhow = "1.0.100"
async-trait = "0.1.89"
bonanca-core = { path = "./crates/bonanca-core" }
bonanca-keyvault = { path = "./crates/bonanca-keyvault" }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.145"
solana-sdk = "3.0.0"
tokio = { version = "1.48.0", features = ["full"] }

[dependencies]
anyhow.workspace = true
bonanca-core.workspace = true
bonanca-keyvault.workspace = true
bonanca-lending = { path = "./crates/bonanca-lending" }
bonanca-managers = { path = "./crates/bonanca-managers" }
clap = { version = "4.5.41", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
