[package]
name = "bonanca"
version = "0.1.0"
edition = "2024"

[features]
database = ["dep:bonanca-db"]

[workspace]
resolver = "3"
members = ["crates/*", "examples/crates/*"]

[workspace.dependencies]
alloy = "1.1.2"
alloy-primitives = "1.4.1"
anyhow = "1.0.100"
bincode = "2.0.1"
bonanca-api-lib = { path = "./crates/bonanca-api-lib" }
bonanca-keyvault = { path = "./crates/bonanca-keyvault" }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.145"
solana-sdk = "3.0.0"
tokio = { version = "1.48.0", features = ["full"] }

[dependencies]
bonanca-db = { path = "./crates/bonanca-db", optional = true }
bonanca-defi = { path = "./crates/bonanca-defi" }
bonanca-keyvault.workspace = true
bonanca-oracle = { path = "./crates/bonanca-oracle" }
bonanca-wallets = { path = "./crates/bonanca-wallets" }
tokio.workspace = true

