[package]
name = "bonanca-api-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22.1"
bincode = "1.3.3"
bonanca-core.workspace = true
reqwest = { version = "0.12.23", features = ["json"] }
solana-sdk.workspace = true
serde.workspace = true