[package]
name = "bonanca-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.36", features = ["signer-keystore"] }
alloy-primitives = "1.3.1"
anyhow = { workspace = true }
async-trait = "0.1.89"
solana-client = "3.0.2"
solana-sdk = "3.0.0"
solana-system-interface = "2.0.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { workspace = true }
serde_bytes = "0.11.19"
serde_json = { workspace = true }
base64 = "0.22.1"
bincode = "1.3.3"
reqwest = { version = "0.12.23", features = ["json"] }
rpassword = "7.4.0"