[package]
name = "bonanca-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
alloy-primitives = "1.3.1"
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22.1"
bincode = "1.3.3"
bonanca-keyvault = { path = "../bonanca-keyvault" }
reqwest = { version = "0.12.23", features = ["json"] }
serde.workspace = true
serde_bytes = "0.11.19"
serde_json.workspace = true
solana-client = "3.0.2"
solana-sdk.workspace = true
solana-system-interface = "2.0.0"
tokio.workspace = true
dirs = "6.0.0"
