[package]
name = "bonanca-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bonanca-keyvault = { path = "../bonanca-keyvault" }
dirs = "6.0.0"
serde.workspace = true
serde_bytes = "0.11.19"
serde_json.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
