[package]
name = "bonanca-defi"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"
anyhow.workspace = true
base64 = "0.22.1"
bincode = "1.3.3"
bonanca-api-lib.workspace = true
bonanca-wallets = { path = "../bonanca-wallets" }
solana-sdk.workspace = true
