[package]
name = "bonanca-keyvault"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.36"
alloy-primitives = "1.3.1"
anyhow = { workspace = true }
bip39 = { version = "2.2.0", features = ["all-languages", "rand"] }
ed25519-dalek-bip32 = "0.3.0"
hdwallet = "0.4.1"
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = "3.0.0"
