[package]
name = "bonanca-keyvault"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
alloy = "1.0.36"
alloy-primitives = "1.3.1"
anyhow = { workspace = true }
argon2 = "0.5.3"
bip39 = { version = "2.2.0", features = ["all-languages", "rand"] }
ed25519-dalek-bip32 = "0.3.0"
hdwallet = "0.4.1"
hex = "0.4.3"
pbkdf2 = "0.12.2"
rpassword = "7.4.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10.9"
solana-sdk = "3.0.0"
