[package]
name = "bonanca-lend"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"
anyhow.workspace = true
async-trait.workspace = true
bonanca-api-lib = { path = "../bonanca-api-lib" }
bonanca-core.workspace = true
bonanca-keyvault.workspace = true
serde.workspace = true
tokio.workspace = true
