[package]
name = "bonanca-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "bonanca"
crate-type = ["cdylib"]

[dependencies]
bonanca-defi = { path = "../bonanca-defi" }
bonanca-keyvault = { path = "../bonanca-keyvault" }
bonanca-oracle = { path = "../bonanca-oracle" }
bonanca-wallets = { path = "../bonanca-wallets" }
pyo3 = { version = "0.27.0" }
tokio.workspace = true
