[package]
name = "bonanca-swap"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22.1"
bincode = "1.3.3"
bonanca-api-lib = { path = "../bonanca-api-lib" }
bonanca-core.workspace = true
bonanca-wallets = { path = "../bonanca-wallets" }
solana-sdk.workspace = true
