[package]
name = "bonanca-wallets"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
bonanca-api-lib.workspace = true
bonanca-db = { path = "../bonanca-db" }
bonanca-keyvault.workspace = true
solana-client = "3.0.2"
solana-sdk.workspace = true
solana-system-interface = "2.0.0"
